--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "type": "git",
     "url": "git://github.com/pan-st/sails-react.git"
   },
-  "license":"MIT",
+  "license": "MIT",
   "bugs": {
     "url": "http://github.com/pan-st/sails-react/issues"
   },
@@ -26,8 +26,8 @@
   "readmeFilename": "README.md",
   "dependencies": {
     "grunt": "0.4.2",
+    "grunt-browserify": "^3.6.0",
     "grunt-react": "~0.7.0",
-    "grunt-browserify ": "~2.0.1",
     "uglify-js": "~2.4.13"
   },
   "devDependencies": {
