--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
   },
   "readmeFilename": "README.md",
   "dependencies": {
-    "grunt": "0.4.2",
+    "grunt": "0.4.5",
     "grunt-browserify": "^3.6.0",
-    "grunt-react": "~0.7.0",
-    "uglify-js": "~2.4.13"
+    "grunt-react": "^0.12.0",
+    "uglify-js": "~2.4.17"
   },
   "devDependencies": {
     "grunt-contrib-jshint": "0.1.1",
